--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -1,6 +1,6 @@
 $black:                       #000;
 
-$body-bg:                     #F9F9F9;
+$body-bg:                     #f2f2f2;
 
 $primary:                     $black;
 $link-decoration:             none;
@@ -10,3 +10,5 @@ $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberati
 
 $border-color-translucent:    rgba($black, .05);
 $border-color:                $border-color-translucent;
+
+$border-radius:               .35rem;
