--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,5 +17,7 @@
 @import "./ujournal/post-list.scss";
 @import "./ujournal/layout.scss";
 @import "./ujournal/thumbnail.scss";
+@import "./ujournal/md.scss";
 @import "./utils/btn-icon.scss";
 @import "./utils/form.scss";
+@import "./vendor/choices.scss";
