--- a/src/styles/ujournal/navbar.scss
+++ b/src/styles/ujournal/navbar.scss
@@ -1,6 +1,5 @@
 .uj-navbar {
-  &-searchInput {
-    background-color: rgba(255, 255, 255, 0.05);
-    border-color: rgba(255, 255, 255, 0.05);
+  &.navbar {
+    background-color: #fff;
   }
 }
